Improve data url handling